k8s/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  labels:
    name: blog
spec:
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      serviceAccountName: blog
      containers:
        - name: blog
          image: ghcr.io/blog-frontend:latest
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
