k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  labels:
    name: blog
spec:
  selector:
    app: blog
  ports:
    - port: 8080
      targetPort: 80
