k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog
  labels:
    name: blog
spec:
  ingressClassName: nginx
  rules:
    - host: PREVIEW_URL
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: blog
                port:
                  number: 8080
